@@ -1,6 +1,7 @@
 1.2.0p3
     Mulitisite
     * Added "view" parameter to dashlet_pnpgraph webservice
+    * BI: Added missing localizations
 
     WATO
     * FIX: It is now possible to create clusters in empty folders
